<resources>
    <string name="app_name">疯魔音乐</string>

    <!--主页面的四个tab名称-->
    <string name="category_ranking">排行榜</string>
    <string name="category_recommend">推荐</string>
    <string name="category_popular">热门</string>
    <string name="category_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="music_count_suffix">首歌曲</string>
    <string name="play_count_suffix">次播放</string>

    <string name="loading_status">正在加载，请稍等...</string>
    <string name="load_more_status">下拉加载更多...</string>
    <string name="no_audio_data">无数据，下拉刷新重试~</string>
    <string name="net_error">网络出问题啦~</string>

    <string name="finding_lyric">正在查找歌词...</string>
    <string name="no_found_lyric">没有找到对应的歌词...</string>

    <string name="no_switching_when_buffering">正在进行缓冲，稍后再进行音乐切换。</string>

    <string name="no_found_singer_info">没有找到匹配的歌手信息...</string>

    <string name="search_input_tip">请输入搜索内容</string>
    <string name="no_search_history">没有搜索记录</string>
    <string name="search_history_list">搜索记录</string>
    <string name="clear_history_list">清空历史记录</string>
    <string name="search_content_recommend">以下搜索项你可能感兴趣：</string>
    <string name="search_hint_prefix">大家都在搜索：</string>

    <string name="not_logged_in">未登录</string>
    <string name="local_music">本地音乐</string>
    <string name="downloaded_music">我的下载</string>
    <string name="recent_play">最近播放</string>
    <string name="my_playlist">我的歌单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_settings">设置</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">问题反馈</string>
    <string name="app_about">关于</string>
    <string name="local_song">歌曲</string>
    <string name="local_singer">歌手</string>
    <string name="local_album">专辑</string>
    <string name="local_music_folder">文件夹</string>
    <string name="all_categories">全部分类</string>
    <string name="all_singer">全部歌手</string>
    <string name="hot_recommend_title">热门推荐</string>
    <string name="personal_recommendation">个性化推荐</string>

    <string-array name="singer_order_list">
        <item>热门</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>#</item>
    </string-array>
    <string-array name="singer_kind_list">
        <item>全部歌手</item>
        <item>华语男歌手</item>
        <item>华语女歌手</item>
        <item>华语组合</item>
        <item>日韩男歌手</item>
        <item>日韩女歌手</item>
        <item>日韩组合</item>
        <item>欧美男歌手</item>
        <item>欧美女歌手</item>
        <item>欧美组合</item>
        <item>其他</item>
    </string-array>
    <string-array name="hot_search_word_list">
        <item>刘德华 笨小孩</item>
        <item>锦绣未央</item>
        <item>桃花源 宋茜</item>
        <item>张学友</item>
        <item>Andy刘</item>
        <item>陈奕迅 浮夸</item>
        <item>Baby Come on</item>
    </string-array>
</resources>
