<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.fragment.MineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_button_style"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.yuqf.customviews.RoundImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_contacts"
            app:back_color="@color/darker_gray"
            app:border_color="@color/colorAccent"
            app:border_width="5px" />

        <TextView
            android:id="@+id/text_view_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/not_logged_in"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_chevron_right_white_48dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/widget_background"
        android:orientation="horizontal"
        android:padding="3dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/local_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_mine_localsong_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/local_music"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_local_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="5"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/downloading_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_mine_download_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/downloaded_music"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_download_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="5"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/recent_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_mine_recentplay_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/recent_play"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_recentplay_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="5"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/widget_background"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/my_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_button_style"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:text="@string/my_playlist"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_view_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_chevron_right_white_48dp" />

            <TextView
                android:id="@+id/text_view_my_playlist_count"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/image_view_arrow"
                android:layout_toStartOf="@id/image_view_arrow"
                android:gravity="end|center_vertical"
                android:text="1"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/darker_gray" />

        <LinearLayout
            android:id="@+id/my_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/darker_gray"
                android:src="@drawable/icon_collect_selected" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_favorite"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_my_favorite_count"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/image_view_arrow"
                android:layout_toStartOf="@id/image_view_arrow"
                android:gravity="end|center_vertical"
                android:text="5"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_chevron_right_white_48dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/widget_background"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/my_settings"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/my_settings"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/darker_gray" />

        <TextView
            android:id="@+id/my_check_update"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/check_update"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/darker_gray" />

        <TextView
            android:id="@+id/my_feedback"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/darker_gray" />

        <TextView
            android:id="@+id/my_about"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/common_button_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/app_about"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>
