<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".ui.activity.SearchActivity">

    <include layout="@layout/top_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back_white_36dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:src="@drawable/ic_search_white_48dp" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="30dp"
                android:ellipsize="none"
                android:hint="@string/search_input_tip"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btn_clear_text"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:background="@android:color/transparent"
                android:src="@drawable/close_white_48dp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/history_related_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/text_view_no_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/no_search_history"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/search_history_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/search_history_list"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_clear_history"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_delete_white_18dp"
                        android:text="@string/clear_history_list"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ListView
                        android:id="@+id/list_view_history1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:divider="@android:color/transparent" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <ListView
                        android:id="@+id/list_view_history2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:divider="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_tips_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/search_content_recommend"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/list_view_tips"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
